features/traffic-management/traffic-shifting/config/httproute-weighted.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traffic-shifting
  namespace: default
spec:
  parentRefs:
    - name: waypoint
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
          weight: 90
        - name: reviews-v2
          port: 9080
          weight: 10
